# aCMF

./: .env.benchmark.example  .env.example  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  docker-compose.benchmark.yml  docker-compose.yml  docs.json  index.mdx  pyproject.toml  quickstart.mdx
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py
app/benchmarks/: __init__.py
app/core/: config.py  enums.py  ids.py  logging.py  time.py
app/db/: base.py  runtime_migrations.py  session.py
app/engines/: __init__.py  context_engine.py  cortex_engine.py  graph_engine.py  job_engine.py  process_engine.py  snapshot_engine.py
app/llms/: adjudicator.py  client.py  context_enhancer.py  cortex.py  prompting.py
app/retrieval/: graph_search.py  query_relevance.py  reranker.py  scope_resolver.py  vector_search.py
app/services/: embedding_service.py  graph_projection_service.py  maintenance_service.py  memory_service.py  relevance_service.py  scoring_service.py  tool_session_service.py
app/storage/: container_repo.py  graph_repo.py  job_repo.py  memory_repo.py  snapshot_repo.py  turn_repo.py  user_repo.py
architecture/: llm-roles.mdx  memory-lifecycle.mdx  overview.mdx
guides/: beam-benchmark.mdx  environment-reference.mdx  operations.mdx  providers.mdx  retrieval-and-scopes.mdx
reference/: context.mdx  deep-memory.mdx  jobs.mdx  process.mdx  snapshot.mdx
scripts/: container_entrypoint.py  process_smoke_test.py
tests/: test_beam_harness.py  test_context_engine.py  test_graph_engine.py  test_routes.py  test_services.py  test_workers.py
(+35 files in other folders)
